--- a/U1D5-Portfolio-BMcMahon.css
+++ b/U1D5-Portfolio-BMcMahon.css
@@ -160,7 +160,7 @@ main2 {
 }
 
 .family:hover {
-    transform: scale(3.2);
+    transform: scale(2.1);
     box-shadow: 0 10px 40px rgb(0 0 0 / 100%);
 }
 
@@ -191,6 +191,7 @@ main2 {
     transition: transform 300ms 50ms, opacity 250ms;
 }
 
+/*
 .hobbies {
     width: 300px;
     height: 300px;
@@ -239,6 +240,8 @@ main2 {
     padding-right: 12px;
     transition: transform 300ms 50ms, opacity 250ms;
 }
+*/
+
 
 .education {
     width: 300px;
@@ -256,7 +259,7 @@ main2 {
 }
 
 .education:hover {
-    transform: scale(4.2);
+    transform: scale(2.1);
     box-shadow: 0 10px 40px rgb(0 0 0 / 100%);
 }
 
