--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0;
+    margin: 2rem;
     background-color: lightblue;
     /* margin-top: -25px; */
 }
@@ -21,6 +21,12 @@ header {
     border-radius: 25px;
     margin-bottom: 20px;
 
+}
+
+
+.name:hover {
+    background-color: green;
+    box-shadow: 0 10px 40px rgb(0 0 0 / 100%);
 }
 
 h1 {}
@@ -52,18 +58,19 @@ h1 {}
     height: 150px;
     margin-right: 100px;
     margin-top: 40px;
+    object-fit: cover;
 
 }
 
 .navbar:hover {
     background-color: green;
-    transition-duration: 3s;
 
 }
 
 .navbar img:hover {
     box-shadow: 0 10px 40px rgb(0 0 0 / 100%);
-    transform: scale(2.10);
+    transform: scale(2.5);
+    transition-duration: 10s;
 
 }
 
@@ -84,19 +91,35 @@ h1 {}
 
 .fa fa-linkedin-square {}
 
+.btn {
+    background-color: DodgerBlue;
+    border: none;
+    color: white;
+    border-radius: 48px;
+    padding: 12px 30px;
+    cursor: pointer;
+    font-size: 20px;
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+    background-color: #73AD21;
+}
+
 
 /* MAIN*/
 
 main {
     text-align: center;
+    height: 700px;
     background-color: lightblue;
     position: relative;
     font-family: consolas;
     border: 2px solid #73AD21;
-    margin-bottom: 20px;
-    margin-right: 30px;
-    margin-left: 30px;
     border-radius: 25px;
+    margin-bottom: 2%;
+    margin-top: .5rem;
+    padding: 2rem;
 }
 
 h2 {}
@@ -107,30 +130,41 @@ main:hover {
 }
 
 
+
 /* ME */
 
-.me img {
-    height: 100px;
-    width: 100px;
-    position: absolute;
-    border: 2px solid #73AD21;
-}
+
 
 .me {
-    width: 300px;
-    height: 350px;
+    width: 400px;
+    height: 400px;
     text-align: left;
     overflow: hidden;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 20vh;
     border-radius: 20px;
     user-select: none;
     box-shadow: 0 10px 40px rgb(0 0 0 / 20%);
     border: 2px solid #73AD21;
     position: absolute;
-    display: inline-block;
+    display: flex;
+    margin-top: 10%;
+    margin-left: 35%;
+}
 
+.meoverlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.7) 10%, rgba(0, 0, 0, 0) 20%);
+}
+
+.me img {
+    height: 100px;
+    width: 100px;
+    border: 2px solid #73AD21;
+    border-radius: 0;
+    object-fit: cover;
 }
 
 .me:hover {
@@ -140,55 +174,60 @@ main:hover {
 }
 
 
+
+.education {
+    width: 400px;
+    height: 400px;
+    text-align: left;
+    overflow: hidden;
+    border-radius: 20px;
+    user-select: none;
+    box-shadow: 0 10px 40px rgb(0 0 0 / 20%);
+    border: 2px solid #73AD21;
+    position: absolute;
+    display: flex;
+    margin-top: 10%;
+    margin-left: 10%;
+}
+
+.work {
+    width: 400px;
+    height: 400px;
+    text-align: left;
+    overflow: hidden;
+    border-radius: 20px;
+    user-select: none;
+    box-shadow: 0 10px 40px rgb(0 0 0 / 20%);
+    border: 2px solid #73AD21;
+    position: absolute;
+    display: flex;
+    margin-top: 10%;
+    margin-left: 60%;
+}
+
+
+
 /* EDUCATION */
 
 .education img {
     height: 100px;
     width: 100px;
-    position: absolute;
-}
-
-.education {
-    width: 300px;
-    height: 350px;
-    text-align: left;
-    overflow: hidden;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 20vh;
-    border-radius: 20px;
-    user-select: none;
-    box-shadow: 0 10px 40px rgb(0 0 0 / 20%);
-    transition-duration: 3s;
+    border: 2px solid #73AD21;
 }
 
 .education:hover {
     transform: scale(2.2);
+    transition-duration: 3s;
     box-shadow: 0 10px 40px rgb(0 0 0 / 100%);
 }
 
 
 /* WORK */
 
-.work {
-    width: 300px;
-    height: 350px;
-    text-align: left;
-    overflow: hidden;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 20vh;
-    border-radius: 20px;
-    user-select: none;
-    box-shadow: 0 10px 40px rgb(0 0 0 / 20%);
-    border: 2px solid #73AD21;
-    position: absolute;
-}
 
 .work img {
     height: 100px;
     width: 100px;
-    position: absolute;
     border: 2px solid #73AD21;
 }
 
@@ -205,7 +244,14 @@ main:hover {
 
 footer {
     margin-top: 10px;
+    padding: 2rem;
+    border: 2px solid #73AD21;
+    border-radius: 25px;
     background-color: lightblue;
+}
+
+.backtotop {
+    text-align: center;
 }
 
 input[type=text],
@@ -247,4 +293,10 @@ input[type=submit]:hover {
     border-radius: 5px;
     background-color: lightblue;
     padding: 20px;
+}
+
+
+footer:hover {
+    background-color: green;
+    box-shadow: 0 10px 40px rgb(0 0 0 / 100%);
 }
