--- a/styles.css
+++ b/styles.css
@@ -40,25 +40,31 @@ h1 {}
     border-radius: 25px;
     position: relative;
     height: 320px;
-    margin-right: 50px;
-    margin-left: 50px;
+    margin-right: 200px;
+    margin-left: 200px;
 }
 
 .navbar span {
     border: 2px solid #73AD21;
     border-radius: 25px;
     font-size: 16px;
+    margin-top: 20px;
     margin-left: 50px;
-    padding: 10px;
+    padding: 8px;
     border-radius: 50px;
+}
+
+ul {
+    margin-top: 6rem;
 }
 
 .navbar img {
     display: inline-block;
     height: 150px;
-    margin-right: 100px;
+    margin-right: 400px;
     margin-top: 40px;
     object-fit: cover;
+    border: 2px solid #73AD21;
 
 }
 
@@ -119,7 +125,7 @@ main {
     border-radius: 25px;
     margin-bottom: 2%;
     margin-top: .5rem;
-    padding: 2rem;
+    padding: 4rem;
 }
 
 h2 {}
@@ -160,7 +166,7 @@ main:hover {
 }
 
 .me img {
-    height: 100px;
+    height: 150px;
     width: 100px;
     border: 2px solid #73AD21;
     border-radius: 0;
@@ -210,9 +216,10 @@ main:hover {
 /* EDUCATION */
 
 .education img {
-    height: 100px;
+    height: 150px;
     width: 100px;
     border: 2px solid #73AD21;
+    object-fit: cover;
 }
 
 .education:hover {
@@ -226,9 +233,10 @@ main:hover {
 
 
 .work img {
-    height: 100px;
+    height: 150px;
     width: 100px;
     border: 2px solid #73AD21;
+    object-fit: cover;
 }
 
 .work:hover {
@@ -275,7 +283,7 @@ textarea {
 
 /* Style the submit button with a specific background color etc */
 input[type=submit] {
-    background-color: #04AA6D;
+    background-color: blue;
     color: white;
     padding: 12px 20px;
     border: none;
@@ -299,4 +307,12 @@ input[type=submit]:hover {
 footer:hover {
     background-color: green;
     box-shadow: 0 10px 40px rgb(0 0 0 / 100%);
+}
+
+.backtotop {
+    color: blue
+}
+
+.backtotop:hover {
+    color: #45a049;
 }
