--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,10 @@ h1 {}
     margin-left: 200px;
 }
 
+p {
+    padding: 2rem;
+}
+
 .navbar span {
     border: 2px solid #73AD21;
     border-radius: 25px;
